--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
     <title>css exercise four</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <section class="container">
-      <h1>Modern luxury <span class="emphasis">travel</span></h1>
+      <h1 class="title">Modern Luxury <span class="emphasis">Travel</span></h1>
       <div class="preview baku">
         <h1>Baku</h1>
+        <img src="images/baku.jpg" alt="skyline image of baku with 3 wave buildings in foreground">
       </div>
       <div class="preview london">
         <h1>London</h1>
+        <img src="images/london.png" alt="Big Ben clock tower and red London bus">
       </div>
       <div class="preview madrid">
         <h1>Madrid</h1>
+        <img src="images/madrid.jpg" alt="dusk view of main Madrid roudabout">
       </div>
       <div class="preview rome">
         <h1>Rome</h1>
+        <img src="images/rome.jpg" alt="Vatican and gorgous background countryside">
       </div>
     </section>
   </body>
