updated css img from html

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
       <h1 class="title">Modern Luxury <span class="emphasis">Travel</span></h1>
       <div class="preview baku">
         <h1>Baku</h1>
-        <img src="images/baku.jpg" alt="skyline image of baku with 3 wave buildings in foreground">
+        <!--<img src="images/baku.jpg" alt="skyline image of baku with 3 wave buildings in foreground"> -->
       </div>
       <div class="preview london">
         <h1>London</h1>
-        <img src="images/london.png" alt="Big Ben clock tower and red London bus">
+      <!-- <img src="images/london.png" alt="Big Ben clock tower and red London bus"> -->
       </div>
       <div class="preview madrid">
         <h1>Madrid</h1>
-        <img src="images/madrid.jpg" alt="dusk view of main Madrid roudabout">
+        <!--<img src="images/madrid.jpg" alt="dusk view of main Madrid roudabout">-->
       </div>
       <div class="preview rome">
         <h1>Rome</h1>
-        <img src="images/rome.jpg" alt="Vatican and gorgous background countryside">
+        <!--<img src="images/rome.jpg" alt="Vatican and gorgous background countryside">-->
       </div>
     </section>
   </body>
